--- a/src/pages/UserAccount/components/LanguageDropdown.module.css
+++ b/src/pages/UserAccount/components/LanguageDropdown.module.css
@@ -71,6 +71,25 @@
 .dropdownMenuOpen {
   max-height: 200px;
   overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: var(--border-dark) transparent;
+}
+
+.dropdownMenuOpen::-webkit-scrollbar {
+  width: 6px;
+}
+
+.dropdownMenuOpen::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.dropdownMenuOpen::-webkit-scrollbar-thumb {
+  background-color: var(--border-dark);
+  border-radius: 3px;
+}
+
+.dropdownMenuOpen::-webkit-scrollbar-thumb:hover {
+  background-color: var(--teal);
 }
 
 .dropdownMenuClosed {
