--- a/src/pages/UserDashboard/UserDashboardLayout.module.css
+++ b/src/pages/UserDashboard/UserDashboardLayout.module.css
@@ -82,12 +82,12 @@
 
 .sidebarButtonActive {
   background-color: var(--teal);
-  color: #ffffff;
+  color: var(--text-on-primary);
 }
 
 .sidebarButtonActive:hover {
   background-color: var(--teal);
-  color: #ffffff;
+  color: var(--text-on-primary);
 }
 
 .content {
