--- a/src/pages/Admin/components/AdminDomains/CreateDomainModal.module.css
+++ b/src/pages/Admin/components/AdminDomains/CreateDomainModal.module.css
@@ -160,12 +160,12 @@
 
 .dropdownOptionSelected {
   background-color: var(--teal);
-  color: #ffffff;
+  color: var(--text-on-primary);
 }
 
 .dropdownOptionSelected:hover {
   background-color: var(--teal-dark);
-  color: #ffffff;
+  color: var(--text-on-primary);
 }
 
 .errorMessage {
@@ -222,7 +222,7 @@
 
 .submitButton {
   background: var(--teal);
-  color: #ffffff;
+  color: var(--text-on-primary);
   border-color: var(--teal);
 }
 
