--- a/src/pages/Admin/Admin.module.css
+++ b/src/pages/Admin/Admin.module.css
@@ -56,6 +56,7 @@
 .sidebarButtonActive {
   background-color: var(--teal);
   color: var(--text-on-primary);
+  font-weight: 600;
 }
 
 .sidebarButtonActive:hover {
