--- a/src/pages/UserDashboard/UserDashboardLayout.module.css
+++ b/src/pages/UserDashboard/UserDashboardLayout.module.css
@@ -83,6 +83,7 @@
 .sidebarButtonActive {
   background-color: var(--teal);
   color: var(--text-on-primary);
+  font-weight: 600;
 }
 
 .sidebarButtonActive:hover {
